feat: Add new frontend
