# oj_backend/docs/swagger.json
@@ -278,16 +278,12 @@
                 "summary": "用户登录",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "username",
-                        "name": "username",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "password",
-                        "name": "password",
-                        "in": "formData"
+                        "name": "userShort",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/define.UserShort"
+                        }
                     }
                 ],
                 "responses": {
@@ -545,6 +541,31 @@
                 }
             }
         },
+        "/api/user/current-user": {
+            "get": {
+                "tags": [
+                    "用户私有方法"
+                ],
+                "summary": "获取用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "authorization",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":\"200\",\"data\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user/submit": {
             "post": {
                 "tags": [
@@ -636,6 +657,17 @@
                 },
                 "output": {
                     "description": "输出",
+                    "type": "string"
+                }
+            }
+        },
+        "define.UserShort": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
